--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,27 @@
 </head>
 
 <body>
+    <nav>
+        <div class="nav__header">
+            <div class="nav__logo">
+                <a href="#"><span>M</span>Agency</a>
+            </div>
+            <div class="nav__menu__btn" id="menu-btn">
+                <i class="ri-menu-line"></i>
+            </div>
+        </div>
+        <ul class="nav__links" id="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#skill">Skills</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#review">Testimonials</a></li>
+            <li><a href="assets/CV.pdf" download="">Download CV</a></li>
+        </ul>
+        <div class="nav__btn">
+            <a href="assets/CV.pdf" download="">Download CV</a>
+        </div>
+    </nav>
+
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
