--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,27 @@
         </div>
     </nav>
 
+    <header class="section__container header__container" id="about">
+        <div class="header__image">
+            <img src="assets/header.png" alt="header">
+        </div>
+        <div class="header__content">
+            <p class="section__subheader">Welcome</p>
+            <h1>I have <span>Creative Design</span> Experience</h1>
+            <p class="section__description">
+                Welcome to my personal portfolio! With a passion for turning ideas
+                into visually stunning digital experiences, I specialize in crafting
+                unique, user-friendly designs.
+            </p>
+            <div class="header__btns">
+                <button class="btn">Contact Me</button>
+                <a href="#">
+                    View Portfolio
+                    <span><i class="ri-arrow-right-up-line"></i></span>
+                </a>
+            </div>
+        </div>
+    </header>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
