--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,23 @@
         </div>
     </header>
 
+    <section class="section__container stats__container">
+        <div class="stats__card">
+            <h4>80+</h4>
+            <p>Satisfied clients</p>
+        </div>
+        <div class="stats__divider"></div>
+        <div class="stats__card">
+            <h4>200+</h4>
+            <p>Projects completed</p>
+        </div>
+        <div class="stats__divider"></div>
+        <div class="stats__card">
+            <h4>99+</h4>
+            <p>Reviews given</p>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
