--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,38 @@
         </div>
     </section>
 
+    <section class="section__container skill__container" id="skill">
+        <div class="skill__content">
+            <p class="section__subheader">My skills</p>
+            <h2 class="section__header">
+                Why Hire Me For Your Next <span>Project?</span>
+            </h2>
+            <p class="section__description">
+                My commitment to quality, attention to detail, and passion for innovation ensure that every project is a success.
+            </p>
+            <div class="skill__btn">
+                <button class="btn">Hire Me</button>
+            </div>
+        </div>
+        <div class="skill__grid">
+            <div class="skill__card">
+                <span><i class="ri-pulse-line"></i></span>
+                <h4>Visual Design</h4>
+                <p>Creating stunning, user-friendly interfaces that captivate and engage.</p>
+            </div>
+            <div class="skill__card">
+                <span><i class="ri-pencil-ruler-2-line"></i></span>
+                <h4>Design Prototype</h4>
+                <p>Developing interactive prototypes & desines to visualise and refine your ideas.</p>
+            </div>
+            <div class="skill__card">
+                <span><i class="ri-graduation-cap-line"></i></span>
+                <h4>UX Research</h4>
+                <p>Conductind thorough research to ensure intuitive and effective user experiences.</p>
+            </div>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
