--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,31 @@
         </div>
     </section>
 
+    <section class="portfolio__container" id="portfolio">
+        <div class="portfolio__content">
+            <p class="section__subheader">Portfolio</p>
+            <h2 class="section__header">
+                My Creative Work Latest <span>Projects</span>
+            </h2>
+            <p class="section__description">
+                From sleek web applications to dynamic user interfaces, these works highlight my ability to bring unique ideas to life.
+            </p>
+            <div class="portfolio__btn">
+                <button class="btn">Show More</button>
+            </div>
+        </div>
+        <div class="portfolio__image__wrapper">
+            <div class="portfolio__image">
+                <img src="assets/portfolio-1.jpg" alt="portfolio" />
+                <img src="assets/portfolio-2.png" alt="portfolio" />
+                <img src="assets/portfolio-3.png" alt="portfolio" />
+                <img src="assets/portfolio-4.png" alt="portfolio" />
+                <img src="assets/portfolio-5.png" alt="portfolio" />
+                <img src="assets/portfolio-6.png" alt="portfolio" />
+            </div>
+        </div>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
