--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,8 @@
                 Why Hire Me For Your Next <span>Project?</span>
             </h2>
             <p class="section__description">
-                My commitment to quality, attention to detail, and passion for innovation ensure that every project is a success.
+                My commitment to quality, attention to detail, and passion for innovation ensure that every project is a
+                success.
             </p>
             <div class="skill__btn">
                 <button class="btn">Hire Me</button>
@@ -110,7 +111,8 @@
                 My Creative Work Latest <span>Projects</span>
             </h2>
             <p class="section__description">
-                From sleek web applications to dynamic user interfaces, these works highlight my ability to bring unique ideas to life.
+                From sleek web applications to dynamic user interfaces, these works highlight my ability to bring unique
+                ideas to life.
             </p>
             <div class="portfolio__btn">
                 <button class="btn">Show More</button>
@@ -124,6 +126,130 @@
                 <img src="assets/portfolio-4.png" alt="portfolio" />
                 <img src="assets/portfolio-5.png" alt="portfolio" />
                 <img src="assets/portfolio-6.png" alt="portfolio" />
+            </div>
+        </div>
+    </section>
+
+    <section class="section__container review__container" id="review">
+        <p class="section__subheader">Reviews</p>
+        <h2 class="section__header">
+            Our Customer Say Something <span>About Us</span>
+        </h2>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="review__card">
+                        <div class="review__ratings">
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                        </div>
+                        <p>
+                            Working with them was a game-changer. Their creative vision and
+                            technical expertise brought our website to life, exceeding all
+                            expectations.
+                        </p>
+                        <div class="review__details">
+                            <img src="assets/review-1.jpg" alt="review">
+                            <div>
+                                <h4>Jon Doe</h4>
+                                <h5>CEO at Tech Innovations</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="review__card">
+                        <div class="review__ratings">
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                        </div>
+                        <p>
+                            The project was delivered on time and within budget. Their
+                            design skills are top-notch, and their attention to detail is
+                            impeccable.
+                        </p>
+                        <div class="review__details">
+                            <img src="assets/review-2.jpg" alt="review">
+                            <div>
+                                <h4>Jane Smith</h4>
+                                <h5>Manager at Creative Solutions</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="review__card">
+                        <div class="review__ratings">
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                        </div>
+                        <p>
+                            I've collaborated with many web developers, but they stands out
+                            for their exceptional creativity and professional approach.
+                        </p>
+                        <div class="review__details">
+                            <img src="assets/review-3.jpg" alt="review">
+                            <div>
+                                <h4>Alice Brown</h4>
+                                <h5>Freelance Graphic Designer</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="review__card">
+                        <div class="review__ratings">
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                        </div>
+                        <p>
+                            Our new web platform is visually stunning and highly functional,
+                            thanks to the innovative design and seamless execution.
+                        </p>
+                        <div class="review__details">
+                            <img src="assets/review-4.jpg" alt="review">
+                            <div>
+                                <h4>Robert White</h4>
+                                <h5>Product Manager at WebCorp</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="review__card">
+                        <div class="review__ratings">
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                            <span><i class="ri-star-fill"></i></span>
+                        </div>
+                        <p>
+                            From initial concept to the final launch, they were a true
+                            partner in creating our online presence. Their work is beautiful
+                            and user-friendly.
+                        </p>
+                        <div class="review__details">
+                            <img src="assets/review-5.jpg" alt="review">
+                            <div>
+                                <h4>Emily Green</h4>
+                                <h5>Entrepreneur</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
