8th: contact form

--- a/public/index.html
+++ b/public/index.html
@@ -254,6 +254,24 @@
         </div>
     </section>
 
+    <section class="section__container contact__container">
+        <p class="section__subheader">Contact</p>
+        <h2 class="section__header">
+            Let's Discuss Your <span>Project</span>
+        </h2>
+        <p class="section__description">
+            Whether you need a new web-site, a redesign, or custom functionality, let's collaborate to create something amazing.
+        </p>
+        <form action="/">
+            <input type="text" placeholder="Full name">
+            <input type="text" placeholder="Your email">
+            <input type="text" placeholder="Phone number">
+            <input type="text" placeholder="Budget">
+            <textarea placeholder="Message"></textarea>
+            <button class="btn">Submit Message</button>
+        </form>
+    </section>
+
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
